# prompt-forge

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  benchmark-settings.yaml  default-settings.yaml  optimized_hybrid_judge.md  pyproject.toml
apps/prompt-forge/: pyproject.toml
apps/prompt-forge-benchmark/: pyproject.toml
apps/prompt-forge-benchmark/data/causal_judgement/: initial_prompt.md  test.tsv  train.tsv  validation.tsv
apps/prompt-forge-benchmark/data/go_emotions/: initial_prompt.md  test.tsv  train.tsv  validation.tsv
apps/prompt-forge-benchmark/src/prompt_forge_benchmark/: main.py
apps/prompt-forge-benchmark/src/prompt_forge_benchmark/cj/: data.py  headline.py  metric.py  runner.py
apps/prompt-forge-benchmark/src/prompt_forge_benchmark/ge/: __init__.py  data.py  fetch.py  headline.py  runner.py
apps/prompt-forge-self-improvement/: README.md  pyproject.toml
apps/prompt-forge-self-improvement/src/prompt_forge_self_improvement/: __init__.py  _registry.py  _runner.py  main.py
apps/prompt-forge-self-improvement/src/prompt_forge_self_improvement/targets/: __init__.py
apps/prompt-forge-self-improvement/src/prompt_forge_self_improvement/targets/feedback_actor/: __init__.py  _scenario_loader.py  metrics.py
apps/prompt-forge-self-improvement/src/prompt_forge_self_improvement/targets/feedback_actor/scenarios/: 01_host_type_section.yaml  02_host_type_annotation_id.yaml  03_id_nonexistent.yaml  04_traceability_single_clear.yaml  05_traceability_multi_signal.yaml  06_action_type_add_example.yaml  07_action_type_rewrite.yaml  08_action_type_insert_node.yaml  09_action_type_guidance.yaml  10_coverage_two_high_sightings.yaml  11_coverage_priority.yaml  12_preserve_named_node.yaml  13_preserve_behavioral.yaml  14_speculative_minimal.yaml  15_realistic_cj.yaml
apps/prompt-forge-self-improvement/src/prompt_forge_self_improvement/targets/g_eval_factory/: _scenario_loader.py
apps/prompt-forge-self-improvement/src/prompt_forge_self_improvement/targets/g_eval_factory/scenarios/holdout/: 01_exact_numerical_answer.yaml  02_uses_no_jargon.yaml  03_valid_yaml_three_keys.yaml  04_preserves_speakers_voice.yaml
apps/prompt-forge-self-improvement/src/prompt_forge_self_improvement/targets/g_eval_factory/scenarios/train/: 01_exact_match_with_reference.yaml  02_tone_matches_reference.yaml  03_captures_key_points.yaml  04_structured_match.yaml  05_faithful_and_complete.yaml  06_factual_consistency_and_coverage.yaml  07_under_word_limit.yaml  08_valid_json.yaml  09_is_polite.yaml  10_is_engaging_intro.yaml  11_starts_with_summary_and_under_limit.yaml  12_professional_and_actionable.yaml  13_contains_required_phrase.yaml  (+1 more)
apps/prompt-forge-self-improvement/src/prompt_forge_self_improvement/targets/hybrid_judge/: __init__.py  _scenario_loader.py  metrics.py
apps/prompt-forge-self-improvement/src/prompt_forge_self_improvement/targets/hybrid_judge/scenarios/: 01_valid_id.yaml  02_document_sentinel.yaml  03_hallucinated_id.yaml  04_obvious_culprit.yaml  05_document_overhedge.yaml  06_parent_vs_child.yaml  07_annotation_culprit.yaml  08_specificity_restatement.yaml  09_competing_culprits.yaml  10_vague_target_behavior.yaml  11_weak_success_criterion.yaml  12_change_obvious.yaml  13_change_systemic.yaml  14_realistic_json_format.yaml  15_realistic_multisection.yaml
apps/prompt-forge-self-improvement/src/prompt_forge_self_improvement/targets/structural_actor/: __init__.py  _scenario_loader.py
apps/prompt-forge-self-improvement/src/prompt_forge_self_improvement/targets/structural_actor/scenarios/: 01_clean_tree.yaml  02_duplicate_section.yaml  03_heading_skip.yaml  04_orphan_content.yaml  05_wrong_container.yaml
apps/prompt-forge/src/prompt_forge/: __init__.py  main.py  settings.py
apps/prompt-model-check/: pyproject.toml
apps/prompt-model-check/src/prompt_model_check/: __init__.py  main.py
docs/: test-infra.md  (+16 more)
(+7 files in other folders)
