[project]
name = "prompt-forge-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Erik Saltwell", email = "erik.saltwell@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "prompt-model",
    "prompt-model-metrics",
    "litellm",
    "scikit-learn",
    "structlog>=25.5.0",
]

[project.scripts]
prompt-forge-benchmark = "prompt_forge_benchmark.main:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
prompt-model = { workspace = true }
prompt-model-metrics = { workspace = true }
