[project]
name = "prompt-forge"
version = "0.1.0"
description = "Main CLI for prompt-forge"
requires-python = ">=3.12"
dependencies = [
    "prompt-model",
    "prompt-model-metrics",
    "pydantic",
    "pyyaml",
]

[project.scripts]
prompt-forge = "prompt_forge.main:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
prompt-model = { workspace = true }
prompt-model-metrics = { workspace = true }
