[project]
name = "prompt-model-check"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Erik Saltwell", email = "erik.saltwell@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "prompt-model",
]

[project.scripts]
prompt-model-check = "prompt_model_check.main:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
prompt-model = { workspace = true }
